--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 Twitter
             </div>
         </a>
-        <a href="https://akashrchandran.in" target="_blank">
+        <a href="https://www.facebook.com/akashrchandran1" target="_blank">
             <div class="links-row">
                 <i class="fab fa-facebook-f"></i>
                 Facebook
