--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 Instagram
             </div>
         </a>
-        <a href="https://twitter.com/akashr_chandran" target="_blank">
+        <a href="https://twitter.com/akas__h" target="_blank">
             <div class="links-row">
                 <img src="https://img.icons8.com/color/36/000000/twitter--v1.png"/>
                 Twitter
