--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     </div>
 
     <div class="linkstable">
+        <a href="https://akashrchandran.in" target="_blank">
+            <div class="links-row">
+                <img src="https://img.icons8.com/color/36/portfolio.png"/>
+                Portfolio
+            </div>
+        </a>
         <a href="https://github.com/akashrchandran" target="_blank">
             <div class="links-row">
                 <img src="https://img.icons8.com/ios-filled/36/000000/github.png"/>
