--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
         </ul>
     </div>
     <div class="profile-container">
-        <img src="img/myphoto.png" alt="profile" /> <br />
+        <img src="img/myphoto.png" alt="profile image" /> <br />
         <strong>@akashrchandran</strong> <br />
         <em>Don't be a Stranger, feel free to connect.</em>
     </div>
 
     <div class="iconic_links">
-        <a href="https://t.me/akashrchandran" target="_blank">
+        <a href="https://t.me/akashrchandran" target="_blank" alt="Telegram link">
             <img src="https://img.icons8.com/color/48/000000/telegram-app--v1.png"/>
         </a>
         <a href="mailto:chandranrakash@gmail.com" target="_blank">
-            <img src="https://img.icons8.com/color/48/000000/gmail--v1.png"/>
+            <img src="https://img.icons8.com/color/48/000000/gmail--v1.png" alt="Email ID"/>
         </a>
         <a href="https://paypal.me/akashrchandran" target="_blank">
-            <img src="https://img.icons8.com/color/48/000000/paypal.png"/>
+            <img src="https://img.icons8.com/color/48/000000/paypal.png" alt="Paypal link"/>
         </a>
         <a href="https://open.spotify.com/user/tmu94p08mnf6k686uc7dyox9x" target="_blank">
-            <img src="https://img.icons8.com/fluency/48/000000/spotify.png"/>
+            <img src="https://img.icons8.com/fluency/48/000000/spotify.png" alt="Spotify link"/>
         </a>
     </div>
 
