--- a/index.html
+++ b/index.html
@@ -55,43 +55,43 @@
     <div class="linkstable">
         <a href="https://akashrchandran.in" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/color/36/portfolio.png"/>
+                <img src="https://img.icons8.com/color/36/portfolio.png" alt="Portfolio link"/>
                 Portfolio
             </div>
         </a>
         <a href="https://github.com/akashrchandran" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/ios-filled/36/000000/github.png"/>
+                <img src="https://img.icons8.com/ios-filled/36/000000/github.png" alt="Github link"/>
                 Github
             </div>
         </a>
         <a href="https://www.linkedin.com/in/akashrchandran" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/color/36/000000/linkedin-circled--v1.png"/>
+                <img src="https://img.icons8.com/color/36/000000/linkedin-circled--v1.png" alt="Linkedin link"/>
                 Linkedin
             </div>
         </a>
         <a href="https://discord.com/users/760319757106282497" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/color/36/000000/discord-logo.png"/>
+                <img src="https://img.icons8.com/color/36/000000/discord-logo.png" alt="Discord link"/>
                 Discord
             </div>
         </a>
         <a href="https://www.instagram.com/intensly_noxious" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/color/36/000000/instagram-new--v1.png"/>
+                <img src="https://img.icons8.com/color/36/000000/instagram-new--v1.png" alt="Instagram link"/>
                 Instagram
             </div>
         </a>
         <a href="https://twitter.com/akas__h" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/color/36/000000/twitter--v1.png"/>
+                <img src="https://img.icons8.com/color/36/000000/twitter--v1.png" alt="Twitter link"/>
                 Twitter
             </div>
         </a>
         <a href="https://www.facebook.com/akashrchandran1" target="_blank">
             <div class="links-row">
-                <img src="https://img.icons8.com/color/36/000000/facebook-new.png">
+                <img src="https://img.icons8.com/color/36/000000/facebook-new.png" alt="Facebook link">
                 Facebook
             </div>
         </a>
